bk_ida/gccida/g0/combine_givs_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs_p/src/loop.c:7649:22: error: unknown type name 'induction_1'
rtx  combine_givs_p( induction_1 *g1, induction_1 *g2) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs_p/src/loop.c:7649:39: error: unknown type name 'induction_1'
rtx  combine_givs_p( induction_1 *g1, induction_1 *g2) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs_p/src/loop.c:7664:62: error: use of undeclared identifier 'machine_mode'
if ( ret && g2->giv_type == DEST_ADDR && memory_address_p( ( machine_mode)*( ( unsigned __int8 *)g2->mem + 2), ret) ) 
                                                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs_p/src/obj/loop.o] Error 1
